; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/lasat/extr_picvue.c_pvc_funcset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/lasat/extr_picvue.c_pvc_funcset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FUNC_SET_CMD = common dso_local global i32 0, align 4
@EIGHT_BYTE = common dso_local global i32 0, align 4
@TWO_LINES = common dso_local global i32 0, align 4
@LARGE_FONT = common dso_local global i32 0, align 4
@MODE_INST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @pvc_funcset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pvc_funcset(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @FUNC_SET_CMD, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @EIGHT_BYTE, align 4
  %6 = load i32, i32* @TWO_LINES, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @LARGE_FONT, align 4
  %9 = or i32 %7, %8
  %10 = and i32 %4, %9
  %11 = or i32 %3, %10
  %12 = load i32, i32* @MODE_INST, align 4
  %13 = call i32 @pvc_write(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @pvc_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
